--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <script>
         let currentLevel = parseInt(localStorage.getItem('birthdayLevel')) || 0;
-        const rewards = ["시작 전", "공기 1회", "박수 3회", "악수 1회", "하이파이브 5회", "물 한 컵", "추파춥스", "과자 1개", "아이스크림", "편의점 1천원", "스타벅스", "편의점 2천원", "배달 3천원", "치킨 사이드", "3천원 송금", "4천원 송금", "4.5천원 송금", "하루 심부름", "💰 5,000원", "🔥 10,000원", "👑 반전 보상"];
+        const rewards = ["시작 전", "공기 1회", "박수 3회", "악수 1회", "하이파이브 5회", "물 한 컵", "추파춥스", "과자 1개", "아이스크림", "편의점 1천원", "바나나우유", "편의점 2천원", "배달 3천원", "치킨 사이드", "3천원 송금", "4천원 송금", "스타벅스 음료 하나", "하루 심부름", "💰 5,000원", "🔥 10,000원", "👑 반전 보상"];
 
         function getProbabilities(level) {
             let success = Math.max(100 - (level * 5), 5);
@@ -158,4 +158,5 @@
     </script>
 </body>
 </html>
+
 
